buils details.scss.  fixes issues with tag layout height on books and blogs, fixes issues with search icon shifting when clicked,  fixes issue with seach menu being beneath somecontent elements.

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -166,6 +166,13 @@
       margin-top: 0;
     }
   }
+
+  &.card-blog .card-buttons,
+  &.card-books .card-buttons {
+    @media (min-width: 800px) {
+      margin-top: 0;
+    }
+  }
 }
 
 .card-meta {
