--- a/src/styles/layouts/header.scss
+++ b/src/styles/layouts/header.scss
@@ -181,7 +181,7 @@ header {
     vertical-align: middle;
     margin-bottom: 0.15em;
     background-position: 4px center;
-    transition: background 0.3s;
+    //transition: background 0.3s;
     padding-left: 34px;
     width: auto;
     text-indent: 0;
